# CleanArchitecture

./: main.py  pyproject.toml  users.db
examples/: example_password.py
src/: __init__.py  main.py  service_locator.py
src/domain/entities/: user.py
src/domain/repositories/: repository.py
src/domain/use_cases/: add_user.py  list_users.py
src/domain/use_cases/dtos/: user.py
src/domain/value_objects/: __init__.py  address.py  email.py  password.py
src/dtos/: user.py
src/entities/: __init__.py  user.py
src/infrastructure/: in_memory_repository.py  sqlite_repository.py
src/presentation/: presenter.py  view_interfaz.py
src/presentation/api/: __init__.py  api_view.py
src/presentation/terminal/: terminal_view.py
src/repositories/: repository.py
src/use_cases/: add_user.py  list_users.py
src/value_objects/: __init__.py  address.py  email.py  password.py
test/: conftest.py  test_domain.py
test/entities/: __init__.py  test_user.py
test/use_cases/: test_add_user.py  test_list_users.py
test/value_objects/: __init__.py  test_address.py  test_email.py  test_password.py
